# HEPiC

./: .gitignore  404.html  README.md  build_installer.bat  build_nuitka.bat  build_pyinstaller.bat  index.html  installer.iss  mkdocs.yml  nuitka-crash-report.xml  package-lock.json  pyproject.toml  run_hepic.py
.github/workflows/: docs.yml  release.yml
HEPiC/: __init__.py  __main__.py  app_config.py  config.json  main.py
HEPiC/communications/: __init__.py  connection_tester.py  klipper_worker.py  tcp_client.py
HEPiC/database/: __init__.py  material_database.py  material_properties.json  materials_sync.py  qc_history_store.py  quality_check_process.md
HEPiC/quality_check/: __init__.py  evaluator.py  gcode.py  materials.py
HEPiC/tab_widgets/: __init__.py  calibration_dialog.py  command_widget.py  connection_widget.py  data_plot_widget.py  data_processor_widget.py  gcode_widget.py  home_widget.py  ir_widget.py  job_sequence_dialog.py  job_sequence_widget.py  klipper_status_widget.py  log_widget.py  platform_status_widget.py  quality_check_widget.py  vision_page_widget.py  vision_widget.py
HEPiC/utils/: __init__.py  data_cleaning.py  gcode_parser.py  gcode_position_mapper.py
HEPiC/vision/: __init__.py  calibration.py  hikcam_win.py  ir_worker.py  video_recorder.py  video_worker.py  vision_utils.py
concepts/architecture/: index.html
concepts/data-recording/: index.html
device/: config.json  pyproject.toml
device/backend/: broadcast.py  config.py  main.py  mock.py  state.py
device/backend/routers/: klipper.py  materials.py  quality_check.py  sensors.py  system.py
device/backend/workers/: klipper.py
device/frontend/: index.html  package-lock.json  package.json  upload_static.sh  vite.config.js
device/frontend/src/: App.svelte
device/frontend/src/components/: LineChart.svelte  MetricCard.svelte  NavBar.svelte
device/frontend/src/lib/: api.js  stores.js  ws.js
device/frontend/src/pages/: Dashboard.svelte  ManualControl.svelte  QualityCheck.svelte  Settings.svelte
docs/: getting-started.md  index.md
docs/concepts/: architecture.md  data-recording.md
docs/images/: README.md
docs/pages/: connection.md  data-processor.md  gcode.md  home.md  ir.md  quality-check.md  vision.md
getting-started/: index.html
images/: index.html
notebooks/: extrusion_force_data_cleaning.ipynb  filament_detection.ipynb  first_production_test.ipynb  force_raw_data.csv  test.ipynb
pages/connection/: index.html
pages/data-processor/: index.html
pages/gcode/: index.html
pages/home/: index.html
pages/ir/: index.html
pages/quality-check/: index.html
pages/vision/: index.html
release_notes/: v0.2.x.md  v0.3.x.md  v0.4.x.md  v0.5.x.md  v0.6.x.md  v1.0.x.md  v1.1.x.md  v1.2.x.md  v1.3.x.md  v1.4.x.md  v1.5.x.md
search/: search_index.json
src/: communications.py  config.json  config.py  config.py.old  gcode_mapper.py  hikcam_win.py  main.py  optris_camera.py  tab_widgets.py  test.py  video_capture.py  virtual_mcu.py  vision.py
src/communications/: __init__.py  connection_tester.py  ir_worker.py  klipper_worker.py  mock_client.py  mock_klipper.py  tcp_client.py  video_worker.py  vision.py
src/helper/: config.json  image_streamer.py  optris_camera.py  pc_client.py  pc_klipper_example.py  (+7 more)
test/: conftest.py  gcode_proc.ipynb  get_pkg_info.py  hik_camera.py  hikcam_win.py  ind360_ip.py  line_highlighter.py  main_window  mettler_read.py  network_test.py  pc_klipper_example.py  serial2ip.py  set_roi.py  test_connection_tester.py  test_klipper_status_widget.py  test_klipper_worker_ext.py  test_klipper_worker_reconnect.py  test_tcp_client_reconnect.py
tools/: png_to_ico.py
(+31 files in other folders)
