[build-system]
# 指定构建工具，这里使用最通用的 setuptools
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HEPiC"
dynamic = ["version"]
description = "The App for Polymaker extrusion platform."
readme = "README.md"  # 也就是 PyPI 上的项目主页介绍
requires-python = ">=3.12" # 指定支持的 Python 版本
license = {text = "MIT"}
authors = [
  {name = "Zhengyang Liu", email = "liuzy19911112@gmail.com"},
]
keywords = ["tools", "automation", "sdk"]

# ========================================================
# 核心依赖配置
# 只包含 HEPiC.communications / HEPiC.database / HEPiC.quality_check
# 这些非 UI 模块运行所需的最小依赖集，方便 device 端单独复用。
# 桌面 UI（tab_widgets / vision / __main__）所需的重依赖见下方 [ui] extra。
# ========================================================
dependencies = [
    "PyYAML",
    "numpy==1.26",
]

[project.optional-dependencies]
ui = [
    "pandas>=2.2,<3.0",
    "pyside6",
    "pyqtgraph",
    "opencv-python==4.8.1.78", # for compatibility with Optris camera SDK
    "qasync",
    "websockets",
    "aiohttp",
    "scikit-image",
    "requests",
]

# 命令行入口 (安装后用户可以在终端直接输入 'my-app-cmd' 运行)
[project.scripts]
hepic = "HEPiC.__main__:start_app"

[project.urls]
Homepage = "https://github.com/zloverty/HEPiC"
Issues = "https://github.com/zloverty/HEPiC/issues"

[tool.setuptools.dynamic]
version = {attr = "HEPiC.__version__"}

[tool.setuptools.packages.find]
where = ["."]  # 代码在当前目录
include = ["HEPiC*"]  # 只包含 HEPiC 文件夹
exclude = ["notebooks*", "test*", "tests*", "docs*"]  # 明确排除实验、测试和文档目录
namespaces = false

[tool.setuptools.package-data]
HEPiC = ["database/materials/*.yaml"]
