[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hepic-device"
version = "0.1.0"
description = "Embedded web backend for the HEPiC standalone device."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pyyaml",
    "numpy",
    # HEPiC (sibling package) must be installed first:
    #   pip install -e ../   (from the repo root)
]

[project.scripts]
hepic-device = "device.backend.main:main"

[tool.setuptools.packages.find]
# Look one level up (repo root) so `device` resolves as a top-level package.
where = [".."]
include = ["device*"]
namespaces = false
